--- a/scenes/scene.yaml
+++ b/scenes/scene.yaml
@@ -1,9 +1,9 @@
 camera:
   position: [0, 1, 3]
-  target: [0, 0, 0]
-  up: [0, 1, 0]
   width: 800
   height: 800
+  yaw: 0.0
+  pitch: 0.0
   fov: 45.0
   near: 0.1
   far: 100.0
